@@ -752,6 +752,9 @@ class UpdateData {
     }
 
     void updateReminder() throws OXException, OXException {
+        if (isMove() && getUpdatedParticipants().isEmpty()) {
+            Reminder.updateReminderOnMove(ctx, getUpdated().getObjectID(), getFolderId(), getDestFolderId(), getUpdated().getPrivateFlag());
+        }
         updateReminder(ctx, getUpdated(), user, isMove(), getRemoved(), getDestFolder(), getUpdatedParticipants(), getUpdatedFolder());
     }
 
